# MPD

./: .gitignore  CMakeLists.txt  README.md
inputFiles/: h2o-sto128g.wfn
mmg3d5modified/src/common/: libmmgtypes.h  libmmgtypesf.h  mmgcommon.h
mmg3d5modified/src/mmg2d/: libmmg2df.h
mmg3d5modified/src/mmg3d/: isosiz_3d.c  mmg3d.c  mmg3d1.c  mmg3d1_delone.c  mmg3d1_pattern.c  mmg3d2.c  mmg3d3.c  split_3d.c  swap_3d.c  swapgen_3d.c
sources/: adaptCube.h  loadChemistry.h  main.h  shapeDerivative.c
testUnit/main/: adaptCube.c  main.c  main.h  meshCube.c  meshCube.h  shapeDerivative.h
testUnit/main/adaptCube/testReadAndAllocateMesh/: readAndAllocateMesh.c  readAndAllocateMesh.h  testRef0.mesh  testRef1.mesh
testUnit/main/loadChemistry/: loadChemistry.c  loadChemistry.h  testLoadChemistry.c  testLoadChemistry.h
testUnit/main/loadChemistry/testFreeChemicalMemory/: freeChemicalMemory.c  freeChemicalMemory.h
testUnit/main/loadChemistry/testGetChemicalFormat/: getChemicalFormat.c
testUnit/main/loadChemistry/testInitializeChemicalStructure/: initializeChemicalStructure.c  initializeChemicalStructure.h
testUnit/main/meshCube/: meshCube.h  testMeshCube.c  testMeshCube.h  testRef1.mesh
testUnit/main/testCheckAllPreprocessorConstants/: checkAllPreprocessorConstants.c  checkAllPreprocessorConstants.h
testUnit/main/testCloseTheFile/: closeTheFile.c
testUnit/main/testInitialFileExists/: initialFileExists.c
testUnit/osvaldo/: mpd-211111.tgz
testUnit/osvaldo/inputFiles/: cube.elas  h2-sto6g.wfn  he-EF-sto6g.wfn  he-EF-vdz.wfn  he-ET-vdz.wfn  inputFile.txt
(+27 files in other folders)
